# EfficientCardiacMRI_T1_T2_Mapping

./: README.md
fittingCodePy/: CMakelists.txt  commandLin.rtf  demo.cxx  demoConfig.h  demoConfig.h.in  fitNiftiImages.cxx  fitNiftiImages.h
fittingCodePy/ExternalLibs/: CMakeLists.txt  _extern_ReadWriteImage.cpp  _extern_ReadWriteImage.h
fittingCodePy/ExternalLibs/lmCurveFitting/: CMakeLists.txt  _curveFitting.cpp  _curveFitting.h
fittingCodePy/ExternalLibs/nifti/: CMakeLists.txt
fittingCodePy/ExternalLibs/pyImage/: CMakeLists.txt  Images.cxx  Images.h
pythonScripts/: T1mapping.py  plotResults.py  showFitCurve.py
pythonScripts/pyImage/: pyImageDy.pyd
